:sparkler: Melhorias e ajustes de acordo com a aula :sparkler:
